--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,7 +16,8 @@
 .post {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 15px;
   border: 2px solid teal;
   align-items: center;
+  margin-top: 15px;
 }
